<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.abel.spinner.suma"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/valor1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:hint="@string/Valor1"/>

        <EditText
            android:id="@+id/valor2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:hint="@string/Valor2"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/Boton3"
            android:text="@string/Boton3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold|italic"
            android:background="#ff2575ff" />

        <EditText
            android:id="@+id/valor3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:hint="@string/Resultado"
            android:enabled="false"/>

        </LinearLayout>

</LinearLayout>
