<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".principal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:text="@string/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView android:text="@string/No_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView android:text="@string/Carrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/spinner1"
            android:layout_gravity="center_horizontal"
            android:entries="@array/operaciones"
            android:spinnerMode="dropdown" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/spinner2"
            android:layout_gravity="center_horizontal"
            android:entries="@array/conversiones"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</LinearLayout>
